- Added Xft support in WINGs (for drawing antialiased fonts with transparency).
- Added a new function: WMCreateAAFont() to create a font which will be
  drawn antialiased using Xft (if available, else function returns NULL)
- New options in WMGLOBAL: AntialiasedText, AASystemFont and AABoldSystemFont.
  Check NEWS for details.
- Fixed some improper calls to snprintf in wfont.c


Changes since wmaker 0.80.0:
............................

- fixed a bug in wfindfile() (rewrote wfindfile() with better logic).
- separated the font caches for normal fonts and fontsets in WINGs (they can
  have the same names and collide in the cache giving unwanted results)
- fixed labels not to display '\n' as a character if multiple '\n' are passed
  but just skip to the next line.
- better warning when importing non-digit characters in PropList Data.
- rewrote WMBox to use a WMArray for subviews. with this change fixed a bug
  about arranging subviews after removing one and a memleak occuring in the
  same case.
- Fixed WMGetViewScreenPosition() to consider the window decorations.
- Added ability to enable/disable individual WMTableViewItems.
- Fixed textfields regarding interpretation of special keys with modifiers.
- Fixed some functions that accept a boolean flag as a paramater, to set only
  1 or 0 for the flag value, not the flag passed by the user.
- Added 2 functions to retrieve the default system fonts:
  WMDefaultSystemFont(WMScreen *scr) and WMDefaultBoldSystemFont(WMScreen *scr)
- Added WMSetButtonImageDimsWhenDisabled() and WMGetButtonEnabled()
- Cleaned-up the header files of functions/vars declared but not implemented
- Added WMGetTextFieldDelegate()


Changes since wmaker 0.70.0:
............................

- added an internal strcasecmp() (only on systems where is not present)
- removed some redundant includes of ../src/config.h when wconfig.h is 
  included too
- removed a wsyserror() message when reading a property list from file